# BUTTON-RAT2

./: .gitignore  CMakeLists.txt  DiffuserWaterDataClean.out  Makefile  README.md  button.sh  readme.md  rename.sh
LikelihoodEvaluation/: #create_like.cc#  #showlike.cc#  #timeRes.txt#  ._like.bin_button_frame_wbls  ._like.bin_button_frame_wgd  ._timeResidualWBLS.C  ._timeResidualsWBLS.C  Makefile  bin.like  but.wgd.postive.res  create_like  create_like.cc  create_like.cc~  like.bin.button.ls  like.bin.button.wbls  like.bin.kilo.sk.forced  like.bin.kilo.wgd  like.bin.test.wgd  residual.C  showlike  showlike.cc  timeRes.C  timeRes.txt  timeRes.txt~  timeRes_postive.C  timeRes_postive.C~  timeResiduals.C  (+3 more)
src/: BonsaiProc.cc  BonsaiProc_original.cc  Button.cc  ButtonDAQProc.cc  ButtonDetectorFactory.cc  ButtonWaveformProc.cc  CMakeLists.txt  GeoButtonShieldFactory.cc  GeoLiner.cc  GeoLinerHex.cc  GeoPMTFactoryBase.cc  LAPPDGen2Proc.cc  Slartibartfast.cc  VertexGen_PhotonRayWithAngularDist.cc  ariadne.cc  azimuth_ks.cc  binfile.cc  bonsaifit.cc  button.cpp  centroid.cc  distpmt.cc  fit_param.cc  fourhitgrid.cc  goodness.cc  hits.cc  hitsel.cc  likelihood.cc  plato.cc  pmt_geometry.cc  searchgrid.cc  sum2dir.cc  timefit.cc
src/include/: BonsaiProc.hh  Button.hh  ButtonDAQProc.hh  ButtonDetectorFactory.hh  ButtonWaveformProc.hh  Config.hh  GeoButtonShieldFactory.hh  GeoLiner.hh  GeoLinerHex.hh  GeoPMTFactoryBase.hh  LAPPDGen2Proc.hh  VertexGen_PhotonRayWithAngularDist.hh  binfile.h  goodness.h  hits.h  likelihood.h  timefit.h
src/putintorat/: OutNtupleProc.cc  readme.txt
(+71 files in other folders)
